sdk/quota/arm-quota/samples/v2/javascript/README.md
# @azure/arm-quota client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-quota in some common scenarios.

| **File Name**                                                                                                 | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| ------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [groupQuotaLimitsListSample.js][groupquotalimitslistsample]                                                   | gets the GroupQuotaLimits for the specified resource provider and location for resource names passed in $filter=resourceName eq {SKU}. x-ms-original-file: 2025-09-01/GroupQuotaLimits/ListGroupQuotaLimits-Compute.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [groupQuotaLimitsRequestGetSample.js][groupquotalimitsrequestgetsample]                                       | get API to check the status of a GroupQuota request by requestId. x-ms-original-file: 2025-09-01/GroupQuotaLimitsRequests/GroupQuotaLimitsRequests_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [groupQuotaLimitsRequestListSample.js][groupquotalimitsrequestlistsample]                                     | get API to check the status of a GroupQuota request by requestId. x-ms-original-file: 2025-09-01/GroupQuotaLimitsRequests/GroupQuotaLimitsRequests_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [groupQuotaLimitsRequestUpdateSample.js][groupquotalimitsrequestupdatesample]                                 | create the GroupQuota requests for a specific ResourceProvider/Location/Resource. The resourceName properties are specified in the request body. Only 1 resource quota can be requested. Please note that patch request creates a new groupQuota request. Use the polling API - OperationsStatus URI specified in Azure-AsyncOperation header field, with retry-after duration in seconds to check the intermediate status. This API provides the finals status with the request details and status. x-ms-original-file: 2025-09-01/GroupQuotaLimitsRequests/PatchGroupQuotaLimitsRequests-Compute.json                                                                                                                                                                                                                                                                                                                                                                            |
| [groupQuotaLocationSettingsCreateOrUpdateSample.js][groupquotalocationsettingscreateorupdatesample]           | enables the GroupQuotas enforcement for the resource provider and the location specified. The resource provider will start using the group quotas as the overall quota for the subscriptions included in the GroupQuota. The subscriptions cannot request quota at subscription level since it is now part of an enforced group. The subscriptions share the GroupQuotaLimits assigned to the GroupQuota. If the GroupQuotaLimits is used, then submit a groupQuotaLimit request for the specific resource - provider/location/resource. Once the GroupQuota Enforcement is enabled then, it cannot be deleted or reverted back. To disable GroupQuota Enforcement - 1. Remove all the subscriptions from the groupQuota using the delete API for Subscriptions (Check the example - GroupQuotaSubscriptions_Delete). 2. Then delete the GroupQuota (Check the example - GroupQuotas_Delete). x-ms-original-file: 2025-09-01/GroupQuotasEnforcement/PutGroupQuotaEnforcement.json  |
| [groupQuotaLocationSettingsGetSample.js][groupquotalocationsettingsgetsample]                                 | gets the GroupQuotas enforcement settings for the ResourceProvider/location. The locations, where GroupQuota enforcement is not enabled will return Not Found. x-ms-original-file: 2025-09-01/GroupQuotasEnforcement/GetGroupQuotaEnforcement.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [groupQuotaLocationSettingsUpdateSample.js][groupquotalocationsettingsupdatesample]                           | enables the GroupQuotas enforcement for the resource provider and the location specified. The resource provider will start using the group quotas as the overall quota for the subscriptions included in the GroupQuota. The subscriptions cannot request quota at subscription level since it is now part of an enforced group. The subscriptions share the GroupQuotaLimits assigned to the GroupQuota. If the GroupQuotaLimits is used, then submit a groupQuotaLimit request for the specific resource - provider/location/resource. Once the GroupQuota Enforcement is enabled then, it cannot be deleted or reverted back. To disable GroupQuota Enforcement - 1. Remove all the subscriptions from the groupQuota using the delete API for Subscriptions (Check the example - GroupQuotaSubscriptions_Delete). 2. Ten delete the GroupQuota (Check the example - GroupQuotas_Delete). x-ms-original-file: 2025-09-01/GroupQuotasEnforcement/PatchGroupQuotaEnforcement.json |
| [groupQuotaSubscriptionAllocationListSample.js][groupquotasubscriptionallocationlistsample]                   | gets all the quota allocated to a subscription for the specified resource provider and location for resource names passed in $filter=resourceName eq {SKU}. This will include the GroupQuota and total quota allocated to the subscription. Only the Group quota allocated to the subscription can be allocated back to the MG Group Quota. x-ms-original-file: 2025-09-01/SubscriptionQuotaAllocation/SubscriptionQuotaAllocation_List-Compute.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [groupQuotaSubscriptionAllocationRequestGetSample.js][groupquotasubscriptionallocationrequestgetsample]       | get the quota allocation request status for the subscriptionId by allocationId. x-ms-original-file: 2025-09-01/SubscriptionQuotaAllocationRequests/SubscriptionQuotaAllocationRequests_Get-Compute.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [groupQuotaSubscriptionAllocationRequestListSample.js][groupquotasubscriptionallocationrequestlistsample]     | get all the quotaAllocationRequests for a resourceProvider/location. The filter paramter for location is required. x-ms-original-file: 2025-09-01/SubscriptionQuotaAllocationRequests/SubscriptionQuotaAllocationRequests_List-Compute.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [groupQuotaSubscriptionAllocationRequestUpdateSample.js][groupquotasubscriptionallocationrequestupdatesample] | request to assign quota from group quota to a specific Subscription. The assign GroupQuota to subscriptions or reduce the quota allocated to subscription to give back the unused quota ( quota >= usages) to the groupQuota. So, this API can be used to assign Quota to subscriptions and assign back unused quota to group quota, which can be assigned to another subscriptions in the GroupQuota. User can collect unused quotas from multiple subscriptions within the groupQuota and assign the groupQuota to the subscription, where it's needed. x-ms-original-file: 2025-09-01/SubscriptionQuotaAllocationRequests/PatchSubscriptionQuotaAllocationRequest-Compute.json                                                                                                                                                                                                                                                                                                  |
| [groupQuotaSubscriptionRequestsGetSample.js][groupquotasubscriptionrequestsgetsample]                         | get API to check the status of a subscriptionIds request by requestId. Use the polling API - OperationsStatus URI specified in Azure-AsyncOperation header field, with retry-after duration in seconds to check the intermediate status. This API provides the finals status with the request details and status. x-ms-original-file: 2025-09-01/SubscriptionRequests/SubscriptionRequests_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [groupQuotaSubscriptionRequestsListSample.js][groupquotasubscriptionrequestslistsample]                       | list API to check the status of a subscriptionId requests by requestId. Request history is maintained for 1 year. x-ms-original-file: 2025-09-01/SubscriptionRequests/SubscriptionRequests_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [groupQuotaSubscriptionsCreateOrUpdateSample.js][groupquotasubscriptionscreateorupdatesample]                 | adds a subscription to GroupQuotas. The subscriptions will be validated based on the additionalAttributes defined in the GroupQuota. The additionalAttributes works as filter for the subscriptions, which can be included in the GroupQuotas. The request's TenantId is validated against the subscription's TenantId. x-ms-original-file: 2025-09-01/GroupQuotasSubscriptions/PutGroupQuotasSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [groupQuotaSubscriptionsDeleteSample.js][groupquotasubscriptionsdeletesample]                                 | removes the subscription from GroupQuotas. The request's TenantId is validated against the subscription's TenantId. x-ms-original-file: 2025-09-01/GroupQuotasSubscriptions/DeleteGroupQuotaSubscriptions.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [groupQuotaSubscriptionsGetSample.js][groupquotasubscriptionsgetsample]                                       | returns the subscriptionIds along with its provisioning state for being associated with the GroupQuota. If the subscription is not a member of GroupQuota, it will return 404, else 200. x-ms-original-file: 2025-09-01/GroupQuotasSubscriptions/GetGroupQuotaSubscriptions.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [groupQuotaSubscriptionsListSample.js][groupquotasubscriptionslistsample]                                     | returns a list of the subscriptionIds associated with the GroupQuotas. x-ms-original-file: 2025-09-01/GroupQuotasSubscriptions/ListGroupQuotaSubscriptions.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [groupQuotaSubscriptionsUpdateSample.js][groupquotasubscriptionsupdatesample]                                 | updates the GroupQuotas with the subscription to add to the subscriptions list. The subscriptions will be validated if additionalAttributes are defined in the GroupQuota. The request's TenantId is validated against the subscription's TenantId. x-ms-original-file: 2025-09-01/GroupQuotasSubscriptions/PatchGroupQuotasSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [groupQuotaUsagesListSample.js][groupquotausageslistsample]                                                   | gets the GroupQuotas usages and limits(quota). Location is required paramter. x-ms-original-file: 2025-09-01/GroupQuotaUsages/GetGroupQuotaUsages.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [groupQuotasCreateOrUpdateSample.js][groupquotascreateorupdatesample]                                         | creates a new GroupQuota for the name passed. A RequestId will be returned by the Service. The status can be polled periodically. The status Async polling is using standards defined at - https://github.com/Azure/azure-resource-manager-rpc/blob/master/v1.0/async-api-reference.md#asynchronous-operations. Use the OperationsStatus URI provided in Azure-AsyncOperation header, the duration will be specified in retry-after header. Once the operation gets to terminal state - Succeeded \| Failed, then the URI will change to Get URI and full details can be checked. x-ms-original-file: 2025-09-01/GroupQuotas/PutGroupQuotas.json                                                                                                                                                                                                                                                                                                                                   |
| [groupQuotasDeleteSample.js][groupquotasdeletesample]                                                         | deletes the GroupQuotas for the name passed. All the remaining shareQuota in the GroupQuotas will be lost. x-ms-original-file: 2025-09-01/GroupQuotas/DeleteGroupQuotas.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [groupQuotasGetSample.js][groupquotasgetsample]                                                               | gets the GroupQuotas for the name passed. It will return the GroupQuotas properties only. The details on group quota can be access from the group quota APIs. x-ms-original-file: 2025-09-01/GroupQuotas/GetGroupQuotas.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [groupQuotasListSample.js][groupquotaslistsample]                                                             | lists GroupQuotas for the scope passed. It will return the GroupQuotas QuotaEntity properties only.The details on group quota can be access from the group quota APIs. x-ms-original-file: 2025-09-01/GroupQuotas/ListGroupQuotas.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [groupQuotasUpdateSample.js][groupquotasupdatesample]                                                         | updates the GroupQuotas for the name passed. A GroupQuotas RequestId will be returned by the Service. The status can be polled periodically. The status Async polling is using standards defined at - https://github.com/Azure/azure-resource-manager-rpc/blob/master/v1.0/async-api-reference.md#asynchronous-operations. Use the OperationsStatus URI provided in Azure-AsyncOperation header, the duration will be specified in retry-after header. Once the operation gets to terminal state - Succeeded \| Failed, then the URI will change to Get URI and full details can be checked. Any change in the filters will be applicable to the future quota assignments, existing quota allocated to subscriptions from the GroupQuotas remains unchanged. x-ms-original-file: 2025-09-01/GroupQuotas/PatchGroupQuotas.json                                                                                                                                                      |
| [quotaCreateOrUpdateSample.js][quotacreateorupdatesample]                                                     | create or update the quota limit for the specified resource with the requested value. To update the quota, follow these steps: 1. Use the GET operation for quotas and usages to determine how much quota remains for the specific resource and to calculate the new quota limit. These steps are detailed in [this example](https://techcommunity.microsoft.com/t5/azure-governance-and-management/using-the-new-quota-rest-api/ba-p/2183670). 2. Use this PUT operation to update the quota limit. Please check the URI in location header for the detailed status of the request. x-ms-original-file: 2025-09-01/putComputeOneSkuQuotaRequest.json                                                                                                                                                                                                                                                                                                                              |
| [quotaGetSample.js][quotagetsample]                                                                           | get the quota limit of a resource. The response can be used to determine the remaining quota to calculate a new quota limit that can be submitted with a PUT request. x-ms-original-file: 2025-09-01/getComputeOneSkuQuotaLimit.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [quotaListSample.js][quotalistsample]                                                                         | get a list of current quota limits of all resources for the specified scope. The response from this GET operation can be leveraged to submit requests to update a quota. x-ms-original-file: 2025-09-01/getComputeQuotaLimits.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [quotaRequestStatusGetSample.js][quotarequeststatusgetsample]                                                 | get the quota request details and status by quota request ID for the resources of the resource provider at a specific location. The quota request ID **id** is returned in the response of the PUT operation. x-ms-original-file: 2025-09-01/getQuotaRequestStatusById.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [quotaRequestStatusListSample.js][quotarequeststatuslistsample]                                               | for the specified scope, get the current quota requests for a one year period ending at the time is made. Use the **oData** filter to select quota requests. x-ms-original-file: 2025-09-01/getQuotaRequestsHistory.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [quotaUpdateSample.js][quotaupdatesample]                                                                     | update the quota limit for a specific resource to the specified value: 1. Use the Usages-GET and Quota-GET operations to determine the remaining quota for the specific resource and to calculate the new quota limit. These steps are detailed in [this example](https://techcommunity.microsoft.com/t5/azure-governance-and-management/using-the-new-quota-rest-api/ba-p/2183670). 2. Use this PUT operation to update the quota limit. Please check the URI in location header for the detailed status of the request. x-ms-original-file: 2025-09-01/patchComputeQuotaRequest.json                                                                                                                                                                                                                                                                                                                                                                                             |
| [usagesGetSample.js][usagesgetsample]                                                                         | get the current usage of a resource. x-ms-original-file: 2025-09-01/getComputeOneSkuUsages.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [usagesListSample.js][usageslistsample]                                                                       | get a list of current usage for all resources for the scope specified. x-ms-original-file: 2025-09-01/getComputeUsages.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node groupQuotaLimitsListSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env  node groupQuotaLimitsListSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[groupquotalimitslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaLimitsListSample.js
[groupquotalimitsrequestgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaLimitsRequestGetSample.js
[groupquotalimitsrequestlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaLimitsRequestListSample.js
[groupquotalimitsrequestupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaLimitsRequestUpdateSample.js
[groupquotalocationsettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaLocationSettingsCreateOrUpdateSample.js
[groupquotalocationsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaLocationSettingsGetSample.js
[groupquotalocationsettingsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaLocationSettingsUpdateSample.js
[groupquotasubscriptionallocationlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaSubscriptionAllocationListSample.js
[groupquotasubscriptionallocationrequestgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaSubscriptionAllocationRequestGetSample.js
[groupquotasubscriptionallocationrequestlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaSubscriptionAllocationRequestListSample.js
[groupquotasubscriptionallocationrequestupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaSubscriptionAllocationRequestUpdateSample.js
[groupquotasubscriptionrequestsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaSubscriptionRequestsGetSample.js
[groupquotasubscriptionrequestslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaSubscriptionRequestsListSample.js
[groupquotasubscriptionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaSubscriptionsCreateOrUpdateSample.js
[groupquotasubscriptionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaSubscriptionsDeleteSample.js
[groupquotasubscriptionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaSubscriptionsGetSample.js
[groupquotasubscriptionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaSubscriptionsListSample.js
[groupquotasubscriptionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaSubscriptionsUpdateSample.js
[groupquotausageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotaUsagesListSample.js
[groupquotascreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotasCreateOrUpdateSample.js
[groupquotasdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotasDeleteSample.js
[groupquotasgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotasGetSample.js
[groupquotaslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotasListSample.js
[groupquotasupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/groupQuotasUpdateSample.js
[quotacreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/quotaCreateOrUpdateSample.js
[quotagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/quotaGetSample.js
[quotalistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/quotaListSample.js
[quotarequeststatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/quotaRequestStatusGetSample.js
[quotarequeststatuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/quotaRequestStatusListSample.js
[quotaupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/quotaUpdateSample.js
[usagesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/usagesGetSample.js
[usageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v2/javascript/usagesListSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-quota?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/quota/arm-quota/README.md
